[package]
name = "tomboy-emulator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
bitfield-struct = "0.10.0"
bitflags = "2.6.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"

[dev-dependencies]
prettydiff = "0.8.0"
circular-buffer = "0.1.9"